# Projet-Courbes-Surfaces-3D

./: .gitignore  CMakeLists.txt  basic.vsh  carreaubezier.cpp  carreaubezier.h  carreaubeziercubique.cpp  carreaubeziercubique.h  courbebezier.cpp  courbebezier.h  courbeparametrique.cpp  courbeparametrique.h  discretisation.cpp  discretisation.h  fragment.glsl  glarea.cpp  glarea.h  globject.cpp  globject.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  myopenglwidget.cpp  myopenglwidget.h  point.cpp  point.h  polyedre.cpp  polyedre.h  polygon.cpp  polygon.h  segment.cpp  segment.h  vertex.glsl  visuCourbe.pro
